complete the project setup

--- a/package.json
+++ b/package.json
@@ -4,11 +4,14 @@
   "description": "Backend for an Event Management application using Node.js, Express, MongoDB, and Redis.",
   "main": "index.js",
   "scripts": {
+    "lint": "eslint .",
+    "lint:fix": "eslint . --fix",
     "start": "node index.js",
     "dev": "nodemon index.js",
+    "start:worker": "node jobs/thumbnailWorker.js",
+    "start:emailWorker": "node jobs/emailWorker.js",
     "test": "mocha tests/**/*.test.js",
-    "lint": "eslint .",
-    "lint:fix": "eslint . --fix"
+    "test:watch": "mocha --watch tests/**/*.test.js"
   },
   "dependencies": {
     "bcrypt": "^5.1.0",
@@ -27,7 +30,12 @@
   "devDependencies": {
     "eslint": "^8.45.0",
     "mocha": "^10.2.0",
-    "nodemon": "^3.0.2"
+    "nodemon": "^3.0.2",
+    "chai": "^4.3.0",
+    "chai-http": "^4.3.0",
+    "sinon": "^15.2.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-plugin-import": "^2.26.0"
   },
   "engines": {
     "node": ">=14.0.0"
