--- a/package.json
+++ b/package.json
@@ -4,16 +4,19 @@
   "description": "Backend for an Event Management application using Node.js, Express, MongoDB, and Redis.",
   "main": "index.js",
   "scripts": {
-    "lint": "eslint .",
-    "lint:fix": "eslint . --fix",
-    "start": "node index.js",
-    "dev": "nodemon index.js",
-    "start:worker": "node jobs/thumbnailWorker.js",
-    "start:emailWorker": "node jobs/emailWorker.js",
-    "test": "mocha tests/**/*.test.js",
-    "test:watch": "mocha --watch tests/**/*.test.js"
+    "lint": "./node_modules/.bin/eslint",
+    "check-lint": "lint [0-9]*.js",
+    "start-server": "nodemon --exec babel-node --presets @babel/preset-env ./server.js",
+    "start-worker": "nodemon --exec babel-node --presets @babel/preset-env ./worker.js",
+    "dev": "nodemon --exec babel-node --presets @babel/preset-env",
+    "test": "./node_modules/.bin/mocha --require @babel/register --exit"
   },
   "dependencies": {
+    "@babel/cli": "^7.8.0",
+    "@babel/core": "^7.8.0",
+    "@babel/node": "^7.8.0",
+    "@babel/preset-env": "^7.8.2",
+    "@babel/register": "^7.8.0",
     "bcrypt": "^5.1.0",
     "body-parser": "^1.20.0",
     "bull": "^4.11.0",
@@ -40,6 +43,6 @@
   "engines": {
     "node": ">=14.0.0"
   },
-  "author": "Your Name",
+  "author": "Oussama Elhadraoui & Mohamed-Elhaimer",
   "license": "MIT"
 }
