--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.0",
+    "mailgun-js": "^0.22.0",
     "mongoose": "^7.4.1",
     "nodemailer": "^6.9.2",
     "qrcode": "^1.4.4",
@@ -31,14 +32,14 @@
     "sharp": "^0.32.1"
   },
   "devDependencies": {
-    "eslint": "^8.45.0",
-    "mocha": "^10.2.0",
-    "nodemon": "^3.0.2",
     "chai": "^4.3.0",
     "chai-http": "^4.3.0",
-    "sinon": "^15.2.0",
+    "eslint": "^8.45.0",
     "eslint-config-airbnb-base": "^15.0.0",
-    "eslint-plugin-import": "^2.26.0"
+    "eslint-plugin-import": "^2.26.0",
+    "mocha": "^10.2.0",
+    "nodemon": "^3.0.2",
+    "sinon": "^15.2.0"
   },
   "engines": {
     "node": ">=14.0.0"
