--- a/package.json
+++ b/package.json
@@ -23,9 +23,11 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "express-validator": "^7.1.0",
     "jsonwebtoken": "^9.0.0",
     "mailgun-js": "^0.22.0",
     "mongoose": "^7.4.1",
+    "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.2",
     "qrcode": "^1.4.4",
     "redis": "^4.1.1",
