--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
     "nodemailer": "^6.9.2",
     "qrcode": "^1.4.4",
     "redis": "^4.1.1",
-    "sharp": "^0.32.1"
+    "sharp": "^0.32.1",
+    "uuid": "^10.0.0"
   },
   "devDependencies": {
     "chai": "^4.3.0",
