--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@babel/node": "^7.8.0",
     "@babel/preset-env": "^7.8.2",
     "@babel/register": "^7.8.0",
+    "axios": "^1.7.4",
     "bcrypt": "^5.1.0",
     "body-parser": "^1.20.0",
     "bull": "^4.11.0",
